course overflow fixed

--- a/frontend/src/components/card/card.css
+++ b/frontend/src/components/card/card.css
@@ -1,7 +1,7 @@
 .cardContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
 }
 
